--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,15 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "format": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "chrono": "cpp",
+        "complex": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "fstream": "cpp",
+        "future": "cpp",
+        "cinttypes": "cpp"
     }
 }
